// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> with beta < stable renders 1`] = `
<DocumentFragment>
  .c6 {
  display: inline-block;
  margin: 20px 10px;
}

.c7 {
  opacity: 1;
}

.c7 .Cursor--blinking {
  opacity: 1;
  -webkit-animation: blink 1s linear infinite;
  animation: blink 1s linear infinite;
}

.c8 {
  opacity: 0;
  display: none;
}

.c8 .Cursor--blinking {
  opacity: 1;
  -webkit-animation: blink 1s linear infinite;
  animation: blink 1s linear infinite;
}

.c9 {
  text-align: center;
  min-height: 150px;
}

.c9 .ms-Spinner-label {
  font-size: 20px;
}

.c11 {
  font-size: 1.2rem;
}

.c10 {
  padding: 1rem 3em;
  font-size: 2rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1rem auto;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: normal;
}

.c4 {
  font-size: 100px;
}

.c5 {
  font-size: 36px;
  text-align: center;
  white-space: pre-line;
}

.c3 {
  -webkit-transition: 0.3s;
  transition: 0.3s;
  position: absolute;
}

.c2 {
  position: relative;
  height: 150px;
  width: 150px;
}

.c2 img {
  height: 150px;
  width: 150px;
}

@media screen and (min-width:768px) {
  .c4 {
    font-size: 200px;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    font-size: 48px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    width: 300px;
    height: 300px;
  }

  .c2 img {
    height: 300px;
    width: 300px;
  }
}

<div
    class="c0"
  >
    <h1
      class="c1"
    >
      <div
        class="c2"
      >
        <img
          class="c3"
          src="poi.png"
        />
      </div>
      <span
        class="c4"
      >
        poi
      </span>
    </h1>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <div
            data-testid="typist"
          />
        </div>
        <div
          class="c8"
          data-testid="typing"
        >
          Scalable KanColle browser and tool.
          <span
            style="opacity: 0;"
          >
            _
          </span>
        </div>
      </div>
    </div>
    <div
      class="c9"
    >
      <a
        class="bp3-button bp3-intent-primary c10"
        data-testid="download-stable-version"
        href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-setup-10.4.0.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp3-button-text"
        >
          <div>
            Download　v10.4.0
          </div>
          <div
            class="c11"
          >
            Windows (x64)
          </div>
          <div
            class="c11"
          >
            Stable, for most users
          </div>
        </span>
      </a>
    </div>
    <div
      class="c12"
    >
      <button
        class="bp3-button bp3-minimal"
        data-testid="open-dialog"
        href="/downloads"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Choose another platform
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Content /> with beta > stable renders 1`] = `
<DocumentFragment>
  .c6 {
  display: inline-block;
  margin: 20px 10px;
}

.c7 {
  opacity: 1;
}

.c7 .Cursor--blinking {
  opacity: 1;
  -webkit-animation: blink 1s linear infinite;
  animation: blink 1s linear infinite;
}

.c8 {
  opacity: 0;
  display: none;
}

.c8 .Cursor--blinking {
  opacity: 1;
  -webkit-animation: blink 1s linear infinite;
  animation: blink 1s linear infinite;
}

.c9 {
  text-align: center;
  min-height: 150px;
}

.c9 .ms-Spinner-label {
  font-size: 20px;
}

.c11 {
  font-size: 1.2rem;
}

.c10 {
  padding: 1rem 3em;
  font-size: 2rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1rem auto;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: normal;
}

.c4 {
  font-size: 100px;
}

.c5 {
  font-size: 36px;
  text-align: center;
  white-space: pre-line;
}

.c3 {
  -webkit-transition: 0.3s;
  transition: 0.3s;
  position: absolute;
}

.c2 {
  position: relative;
  height: 150px;
  width: 150px;
}

.c2 img {
  height: 150px;
  width: 150px;
}

@media screen and (min-width:768px) {
  .c4 {
    font-size: 200px;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    font-size: 48px;
  }
}

@media screen and (min-width:768px) {
  .c2 {
    width: 300px;
    height: 300px;
  }

  .c2 img {
    height: 300px;
    width: 300px;
  }
}

<div
    class="c0"
  >
    <h1
      class="c1"
    >
      <div
        class="c2"
      >
        <img
          class="c3"
          src="poi.png"
        />
      </div>
      <span
        class="c4"
      >
        poi
      </span>
    </h1>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <div
            data-testid="typist"
          />
        </div>
        <div
          class="c8"
          data-testid="typing"
        >
          Scalable KanColle browser and tool.
          <span
            style="opacity: 0;"
          >
            _
          </span>
        </div>
      </div>
    </div>
    <div
      class="c9"
    >
      <a
        class="bp3-button bp3-intent-primary c10"
        data-testid="download-stable-version"
        href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-setup-10.4.0.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp3-button-text"
        >
          <div>
            Download　v10.4.0
          </div>
          <div
            class="c11"
          >
            Windows (x64)
          </div>
          <div
            class="c11"
          >
            Stable, for most users
          </div>
        </span>
      </a>
      <a
        class="bp3-button c10"
        href="https://npm.taobao.org/mirrors/poi/v10.5.0-beta.0/poi-setup-10.5.0-beta.0.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp3-button-text"
        >
          <div>
            Download　v10.5.0-beta.0
          </div>
          <div
            class="c11"
          >
            Windows (x64)
          </div>
          <div
            class="c11"
          >
            Beta, for new features
          </div>
        </span>
      </a>
    </div>
    <div
      class="c12"
    >
      <button
        class="bp3-button bp3-minimal"
        data-testid="open-dialog"
        href="/downloads"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Choose another platform
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
